--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,15 +11,22 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  border: 2px solid white;
+  margin: 20px 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.home {
+  background-color: orange;
+  color: white;
+}
+
+.search {
+  background-color: green;
+  color: white;
+}
+
+.logout {
+  background-color: darkorange;
+  color: white;
 }
