--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .header {
   display: flex;
   flex-direction: column;
@@ -11,19 +10,140 @@
 .container {
   border: 2px solid white;
   margin: 20px 10px;
+  display: flex;
+  /* flex-direction: column; */
+  /* justify-content: space-between; */
+  /* align-items: flex-start; */
+  /* align-content: flex-start; */
+  flex-wrap: wrap;
+}
+
+.container:first-child {
+  height: 200px;
+}
+
+.container:last-child {
+  height: 500px;
 }
 
 .home {
   background-color: orange;
   color: white;
+  /* align-self: flex-start; */
+  /* width: 200px; */
+  /** Shortcut grow shrink basis */
+  /* flex: 1 1 0; */
+  /** Shortcut grow shrink basis */
+  /* flex-grow: 0; */
+  /** Remaining space */
+  /* flex-shrink: 1; */
+  /** Base width */
+  /* flex-basis: 200px; */
 }
 
 .search {
   background-color: green;
   color: white;
+  /* align-self: center; */
+  /* width: 200px; */
+  /* flex: 1; */
+  /* flex-grow: 2; */
+  /* flex-shrink: 1;
+  flex-basis: 200px; */
 }
 
 .logout {
   background-color: darkorange;
   color: white;
+  /* width: 200px; */
+  /* flex: 1; */
+}
+
+.pip {
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  border-radius: 10px;
+}
+
+.item {
+  background-color: lightgray;
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  padding: 10px;
+}
+
+/* First face */
+.first-face {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  order: 2;
+}
+
+/* Second face */
+.second-face {
+  display: flex;
+  justify-content: space-between;
+  order: 1;
+}
+
+.second-face .pip:nth-child(2) {
+  align-self: flex-end;
+}
+
+/* Third face */
+.third-face {
+  display: flex;
+  justify-content: space-between;
+  order: 1;
+}
+
+.third-face .pip:nth-child(2) {
+  align-self: center;
+}
+
+.third-face .pip:nth-child(3) {
+  align-self: flex-end;
+}
+
+/* Fourth face */
+.fourth-face {
+  display: flex;
+  justify-content: space-between;
+}
+
+.fourth-face .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* Fifth six */
+.fifth-face {
+  display: flex;
+  justify-content: space-between;
+}
+
+.fifth-face .column:nth-child(2) {
+  align-self: center;
+}
+
+.fifth-face .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* Sixth face */
+.sixth-face {
+  display: flex;
+  justify-content: space-between;
+}
+
+.sixth-face .column {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
